update project cards and project card grid

--- a/index.html
+++ b/index.html
@@ -38,8 +38,31 @@
                   <img
                     src="/src/assets/sample.jpg"
                     alt="Rotating Navigation"
-                    width="250px"
-                    height="250px"
+                    class="project-card__image"
+                  />
+                  <div class="project-card__content">
+                    <h3 class="project-card__title">Quote Generator</h3>
+                    <p class="project-card__desc">
+                      A simple quote generator that fetches random quotes from
+                      an API.
+                    </p>
+                    <div>
+                      <span class="project-card__tag">HTML</span>
+                      <span class="project-card__tag">CSS</span>
+                      <span class="project-card__tag">JavaScript</span>
+                    </div>
+                  </div>
+                </a>
+                <div class="project-card__links roboto-bold">
+                  <a href="#"> view code </a>
+                  <a href="#"> view demo </a>
+                </div>
+              </div>
+              <div class="project-card">
+                <a href="/projects/01-rotating-navigation">
+                  <img
+                    src="/src/assets/sample.jpg"
+                    alt="Rotating Navigation"
                     class="project-card__image"
                   />
                   <div class="project-card__content">
