--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      rel="stylesheet"
+    />
+
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <link rel="stylesheet" href="./src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,37 +46,20 @@
                     class="project-card__image"
                   />
                   <div class="project-card__content">
-                    <h3 class="project-card__title">Quote Generator</h3>
-                    <p class="project-card__desc">
-                      A simple quote generator that fetches random quotes from
-                      an API.
-                    </p>
-                    <div>
-                      <span class="project-card__tag">HTML</span>
-                      <span class="project-card__tag">CSS</span>
-                      <span class="project-card__tag">JavaScript</span>
+                    <div class="project-card__title-container">
+                      <h3 class="project-card__title">Quote Generator</h3>
+
+                      <i
+                        class="fa-brands fa-github"
+                        style="color: #ffffff"
+                        onclick="window.open(`https://developer.mozilla.org/en-US/docs/Web/API/Location`, '_blank')"
+                      ></i>
                     </div>
-                  </div>
-                </a>
-                <div class="project-card__links roboto-bold">
-                  <a href="#"> view code </a>
-                  <a href="#"> view demo </a>
-                </div>
-              </div>
-              <div class="project-card">
-                <a href="/projects/01-rotating-navigation">
-                  <img
-                    src="/src/assets/sample.jpg"
-                    alt="Rotating Navigation"
-                    class="project-card__image"
-                  />
-                  <div class="project-card__content">
-                    <h3 class="project-card__title">Quote Generator</h3>
                     <p class="project-card__desc">
                       A simple quote generator that fetches random quotes from
-                      an API.
+                      an API. Test
                     </p>
-                    <div>
+                    <div class="project-card__tech-stack">
                       <span class="project-card__tag">HTML</span>
                       <span class="project-card__tag">CSS</span>
                       <span class="project-card__tag">JavaScript</span>
