Add quote generator

--- a/src/projects/quote_generator/quote_generator.html
+++ b/src/projects/quote_generator/quote_generator.html
@@ -28,6 +28,7 @@
             Nostrum, ratione qui! Eligendi atque quasi asperiores voluptatum
             nemo, voluptate aperiam accusantium. Ea?
           </p>
+          <p id="author">- John Doe</p>
           <div id="quote-container__btns">
             <button id="new-quote">New Quote</button>
             <button id="tweet-quote">
@@ -37,5 +38,6 @@
         </div>
       </div>
     </main>
+    <script type="module" src="./qg.ts"></script>
   </body>
 </html>
