Add back btn, add base route constant, style back btn

--- a/src/projects/quote_generator/index.html
+++ b/src/projects/quote_generator/index.html
@@ -18,6 +18,12 @@
   </head>
   <body>
     <main>
+      <a
+        href="mini-projects/src/index.html"
+        class="back-link back-link--lightskyblue"
+      >
+        <i class="fa-solid fa-arrow-left"></i>Back
+      </a>
       <div>
         <h1 id="app-title">Quote Generator</h1>
         <div id="quote-container">
