fix broken link to mini-projects index.html

--- a/src/projects/quote_generator/index.html
+++ b/src/projects/quote_generator/index.html
@@ -19,7 +19,7 @@
   <body>
     <main>
       <a
-        href="mini-projects/src/index.html"
+        href="/mini-projects/src/index.html"
         class="back-link back-link--lightskyblue"
       >
         <i class="fa-solid fa-arrow-left"></i>Back
