chore: Update back button link in quote generator index.html

--- a/src/projects/quote_generator/index.html
+++ b/src/projects/quote_generator/index.html
@@ -19,8 +19,9 @@
   <body>
     <main>
       <a
-        href="/mini-projects/src/index.html"
+        href="javascript:void(0)"
         class="back-link back-link--lightskyblue"
+        onclick="history.back()"
       >
         <i class="fa-solid fa-arrow-left"></i>Back
       </a>
