Add video play and pause functionality

--- a/src/projects/custom_video_player/index.html
+++ b/src/projects/custom_video_player/index.html
@@ -20,7 +20,7 @@
     <main>
       <h1>Custom Video Player</h1>
       <div class="screen-container">
-        <video src="./gone.mp4"></video>
+        <video id="video-player" src="./gone.mp4"></video>
         <div class="controls">
           <button class="play-btn">
             <i class="fa-solid fa-play"></i>
@@ -46,5 +46,6 @@
         </div>
       </div>
     </main>
+    <script src="./index.ts"></script>
   </body>
 </html>
