--- a/src/projects/custom_video_player/index.html
+++ b/src/projects/custom_video_player/index.html
@@ -26,7 +26,7 @@
             <i class="fa-solid fa-play"></i>
           </button>
           <button class="step-fwd-btn">
-            <i class="fa-solid fa-step-forward"></i>
+            <i class="fa-solid fa-forward-step"></i>
           </button>
           <button class="volume-btn">
             <i class="fa-solid fa-volume-high"></i>
