Add tooltip and current time clap

--- a/src/projects/custom_video_player/index.html
+++ b/src/projects/custom_video_player/index.html
@@ -27,6 +27,7 @@
           </button>
           <button class="step-fwd-btn">
             <i class="fa-solid fa-forward-step"></i>
+            <span class="tooltip">5<small>s</small></span>
           </button>
           <button class="volume-btn">
             <i class="fa-solid fa-volume-high"></i>
