--- a/src/projects/custom_video_player/index.html
+++ b/src/projects/custom_video_player/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
@@ -20,7 +21,21 @@
     <main>
       <h1>Custom Video Player</h1>
       <div class="screen-container">
-        <video id="video-player" src="./gone.mp4"></video>
+        <video id="video-player" src="./gone.mp4">
+          <track
+            src="./subtitles.vtt"
+            kind="subtitles"
+            srclang="en"
+            label="English"
+            default
+          />
+          <track
+            src="./description.vtt"
+            kind="description"
+            srclang="en"
+            label="English"
+          />
+        </video>
         <div class="controls">
           <button class="play-btn">
             <i class="fa-solid fa-play"></i>
